--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 	<meta charset="utf-8">
-	<title>Curso da Alura de DevOps</title>
+	<title>Lista de Cursos de DevOps da Alura</title>
 </head>
 <body>
 	<ul>
