--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<ul>
-		<li>Vagrant: Criando maquinas virtuais</li>
+		<li>Vagrant</li>
 		<li>Docker</li>
 		<li>Ansible</li>
 		<li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
